--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -92,14 +92,14 @@ index_with_subtitle: false
 # Value before `||` delimeter is the target link.
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, question icon will be loaded.
 menu:
-  home: / || home
-  categories: /categories/ || th
-  about: /about/ || user
-  tags: /tags/ || tags
+  home: /|| home
+  categories: /categories/|| th
+  about: /about/|| user
+  tags: /tags/|| tags
   # archives: /archives/ || archive
   # schedule: /schedule/ || calendar
   # sitemap: /sitemap.xml || sitemap
-  commonweal: /404/ || heartbeat
+  # commonweal: /404/ || heartbeat
 
 # Enable/Disable menu icons.
 menu_icons:
