--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "version": "5.3.0"
   },
   "dependencies": {
+    "commitizen": "^4.2.4",
     "hexo": "^5.0.0",
     "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-deployer-git": "^2.1.0",
